    haskell.
  * debian/control: Remove Build-Dependes(-Indep) in haddock, and
    versioned in ghc6.
  * debian/control: Build-Depends-Indep: correct.
  * debian/control: Use haskell: variables.
  * debian/control: Include -prof package.
  * debian/control: Use misc:Depends.
  * Fix "typo in package description" by correction typo.  Thanks to Georg
    Neis <gn@oglaroon.de>. (Closes: #414898)

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Thu, 18 Mar 2010 08:03:47 -0300

ldap-haskell (0.6.6-1) unstable; urgency=low

  * New upstream release.
  * Rebuild for GHC 6.12.
  * Switching to Haskell team maintenance.
  * Dropping Hugs support for now due to lack of support for Hugs in Cabal.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 18 Feb 2010 11:25:39 -0600

ldap-haskell (0.6.5-1) unstable; urgency=low

  * Update for GHC 6.10.  Closes: #522473.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 06 Apr 2009 10:41:58 -0500

ldap-haskell (0.6.4.1) unstable; urgency=high

  * Rebuild with newer GHC.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 19 Jan 2009 10:46:26 -0600

ldap-haskell (0.6.4.0) unstable; urgency=low

  * Update for newer OpenLDAP: rename LDAP_X_PROXY_AUTHZ_FAILURE
    from LDAP_PROXY_AUTHZ_FAILURE.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 04 Feb 2008 01:14:44 -0600

ldap-haskell (0.6.3.0) unstable; urgency=low

  * Update for newer GHC 6.8.x.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 16 Jan 2008 10:06:34 -0600

ldap-haskell (0.6.2) unstable; urgency=low

  * Update for GHC 6.6.1.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 06 Jun 2007 07:12:45 -0500

ldap-haskell (0.6.1) unstable; urgency=low

  * Update copyright info and doc locations

 -- John Goerzen <jgoerzen@complete.org>  Wed, 10 Jan 2007 05:40:45 -0600

ldap-haskell (0.6.0) unstable; urgency=low

  * Removed LDAP_OPT_ON and LDAP_OPT_OFF -- caused link problems on Gentoo

  * Updates for GHC 6.6

  * Removed some extra files
