@@ -1,20 +1,0 @@
-Document: missingh
-Title: Debian missingh Manual
-Author: <insert document author here>
-Abstract: This manual describes what missingh is
- and how it can be used to
- manage online manuals on Debian systems.
-Section: unknown
-
-Format: debiandoc-sgml
-Files: /usr/share/doc/missingh/missingh.sgml.gz
-
-Format: postscript
-Files: /usr/share/doc/missingh/missingh.ps.gz
-
-Format: text
-Files: /usr/share/doc/missingh/missingh.text.gz
-
-Format: HTML
-Index: /usr/share/doc/missingh/html/index.html
-Files: /usr/share/doc/missingh/html/*.html
