@@ -12,6 +12,7 @@ ldap-haskell (0.6.6-2) UNRELEASED; urgency=low
   * debian/control: Use misc:Depends.
   * Fix "typo in package description" by correction typo.  Thanks to Georg
     Neis <gn@oglaroon.de>. (Closes: #414898)
+  * debian/missingpy.doc-base.EX: Remove dh-make example file.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Thu, 18 Mar 2010 08:03:47 -0300
 
